--- a/gut/misc.tex
+++ b/gut/misc.tex
@@ -3,7 +3,7 @@
 \package{soul}
 \codeshow{\st{text}}
 
-\subsection{Page Numbers}
+\subsection{Page Numbers}\label{numbers}
 \begin{longtable}{l l}
   \justexplain{\thispagestyle{empty}}{no page number}
   \justexplain{\pagenumbering{roman}}{roman i ii}
