--- a/gut/symbols.tex
+++ b/gut/symbols.tex
@@ -1,8 +1,12 @@
-\section{Symbols}
+\section{Symbols} \label{othersymb}
 \subsection{The bane of students}
-\begin{longtable}{l c l}
-\code{$\backslash$ \textbackslash} & \textbackslash & backslash \\
-\explain{\LaTeX}{\textit{that} symbol}
+\begin{longtable}{l l}
+  \code{$\backslash$ \textbackslash} & \textbackslash\\
+  \code{$\sharp$ \#} & \# \\
+  \codeshow{\checkmark}\\
+  \codeshow{\LaTeX}\\
+  \codeshow{\copyright}\\
+  %\codeshow{W}{WIP}
 \end{longtable}
 
 \subsection{Diacritics}
