--- a/math/math_mode.tex
+++ b/math/math_mode.tex
@@ -10,6 +10,8 @@
 \codeeg{\[F(x) = \int f(x)\, dx \]}\\
 \codeeg{$F(x) = \int f(x)\,dx$}
 
+\note{Adding \code{fleq} in the \code{\documentclass} options aligns equations to the left}
+
 Most spaces are ignored, and must be specified manually.
 \note{LaTeX complains if you leave empty lines in math mode.}
 
