--- a/math/symbols.tex
+++ b/math/symbols.tex
@@ -20,9 +20,8 @@ Other peculiar symbols are:\\
 For declaring custom operators:
 \mcodeshow{\operatorname{atan}(x)}\\
 or if it's used frequently: \code{\DeclareMathOperator*{\atan}{atan}} (in preamble).
-
+\pagebreak
 \subsection*{Sums, integrals, and other ``big'' symbols}
-
 \begin{longtable}{l l | l l | l l}
   \codeshowB{\sum      }{\prod      }{\coprod}
   \codeshowB{\bigoplus }{\bigotimes }{\bigodot}
@@ -177,10 +176,9 @@ E.g.:\\
   \codeshowD{\wp}{\infty}&
   \codeshowD{\gimel}{\&}\\
   
-  \codeshowD{\sharp}{\checkmark}&
-  \codeshowD{W}{W}&
-  \codeshowD{W}{WIP}
 \end{longtable}
+
+More non-math symbols are at page \pageref{othersymb}.
 
 \subsubsection*{Misc}
 
