--- a/rest/doc_structure.tex
+++ b/rest/doc_structure.tex
@@ -109,6 +109,7 @@ In some editors the index must be compiled separately (with \texttt{Ctrl-Shift-I
 \printindex
 
 Add word to index: \index{Entry}
+Doing it like this groups them:  \index{Convergenta!in $L^{p}$}
 \end{latex}
 
 \subsection{Pdfbookmark}
