--- a/tables.tex
+++ b/tables.tex
@@ -303,3 +303,5 @@ Does everything that \coden{tabular} does and more:
 \bigskip
 Table \ref{longTable} is a nicer table.
 \end{example}
+
+\note{\texttt{sidewaystable} might be useful for sideways tables}.
