--- a/math/other.tex
+++ b/math/other.tex
@@ -86,8 +86,7 @@ or, if it's used frequently, add this in preamble to make all look like this:\\
 \subsection*{Nice vertical space}
 \begin{example}
 \centering
-%not really well shown here but \, can be useful
-$\int f(x)\,dx$ vs $\frac{a}{b} \cdot x$\\
+$\int f(x)\,dx$ vs $\int f(x) dx$ 
 $(x - y) \in \R, \quad \forall x, y \in \R$
 \end{example}
 
