--- a/rest/doc_structure.tex
+++ b/rest/doc_structure.tex
@@ -23,7 +23,8 @@ To add it to the Table of contents use:
 \begin{minipage}[t]{0.49\textwidth}
 \begin{latex}
 % preamble:
-\title{\LaTeX{} CheatSheet}
+\title{\LaTeX{} CheatSheet\footnote{
+    Saving 6 times more trees \& stuff}}
 \author{\L{}ucasz Zieli\'nski
  \thanks{Dzi\k{e}ki \'swiatu}}
 \date{\today}
@@ -42,16 +43,17 @@ To add it to the Table of contents use:
    \begin{center}
    \vfill
    %\vspace{60pt}
-   { \Large {\LaTeX{} CheatSheet} \par}
+   { \Large {\LaTeX{} CheatSheet}\footnote{
+       Saving 6 times more trees \& stuff} \par}
    \vspace{3em}
    {\normalsize
     \lineskip .75em
     \begin{tabular}[t]{c}
-      Łucasz Zieliński\footnotemark[1]
+      Łucasz Zieliński\footnotemark[2]
     \end{tabular}\par
    }
    {\normalsize \today \par}
-   \footnotetext[1]{Dzięki światu}
+   \footnotetext[2]{Dzięki światu}
    \end{center}
    \vfill
    \vfill
